TNoodle updated to latest version and new JRE base image